# E3SM

./: .gitmodules
cime_config/: config_files.xml
components/: CMakeLists.txt
components/cmake/: build_model.cmake
components/demsi/: CMakeLists.txt
components/demsi/bld/: configure
components/demsi/cime_config/: buildnml  config_pes.xml
components/demsi/driver/: CMakeLists.txt  ice_comp_mct.F
